--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8210,6 +8210,62 @@ let result=minMutation(start,end,bank);
 console.log(result);
 ```
 
+## 442. 数组中重复的数据
+
+给你一个长度为 n 的整数数组 nums ，其中 nums 的所有整数都在范围 [1, n] 内，且每个整数出现 一次 或 两次 。请你找出所有出现 两次 的整数，并以数组形式返回。
+
+你必须设计并实现一个时间复杂度为 O(n) 且仅使用常量额外空间的算法解决此问题。
+
+提示：
+
+n == nums.length
+1 <= n <= 105
+1 <= nums[i] <= n
+nums 中的每个元素出现 一次 或 两次
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[]}
+ */
+var findDuplicates = function(nums) {
+    let n=nums.length;
+    let ans=new Set();
+    let i=0;
+    while(i<n){
+        if(nums[i]!==i+1){
+            if (nums[i]>i+1) {
+                if (nums[nums[i]-1]==nums[i]) {
+                    ans.add(nums[i]);
+                    nums[i]=0
+                    i++;
+                }else{
+                    let temp=nums[i];
+                    nums[i]=nums[nums[i]-1];
+                    nums[temp-1]=temp;
+                }
+            }else{
+                if (nums[nums[i]-1]!==0) {
+                    ans.add(nums[i]);
+                    nums[i]=0;
+                }else{
+                    nums[nums[i]-1]=nums[i];
+                    nums[i]=0;
+                }
+                i++;
+            }
+        }else{
+            i++;
+        }
+    }
+    return [...ans];
+};
+
+let nums = [4,3,2,7,8,2,3,1];
+let result=findDuplicates(nums);
+console.log(result);
+```
+
 
 
 ## 472. 连接词
