--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -1875,3 +1875,521 @@ Number(null); // 0
 
 ---
 
+## 1.3 请问如何判断js变量的数据类型？
+
+常见判断方法有以下四种：
+
+- **typeof xx**
+
+返回一个字符串（小写），用来判断：Undefined、String、Number、Boolean、Symbol、Object、Function，无法检测引用类型里的Array
+
+```bash
+> typeof(undefined)
+'undefined'
+> typeof("abc")
+'string'
+> typeof(100)
+'number'
+> typeof(false)
+'boolean'
+> typeof(Symbol(2))
+'symbol'
+
+> typeof(BigInt(200))
+'bigint'
+```
+
+优点：可区分Object与Function
+
+缺点：
+
+（1）对于 Null ，返回 object 类型
+
+```js
+> typeof(null)
+'object'
+```
+
+原因：Null类型只有一个null值，该值表示一个空对象指针（出自JavaScript高级程序设计）
+
+**typeof的检测原理**：不同的对象在底层都表示为二进制，在js中二进制前**（低）三位存储其类型信息**为：000: Object、100：String、110： Boolean、1： Number。**null的二进制表示全为0，自然前三位也是0，所以执行typeof时会返回"object"。**
+
+  （2） 对于Array、Date、RegExp都会返回object，不能更详细的区分
+
+```js
+var fn=function(){};
+let obj={a:1};
+let arr=[1,2,3];
+let now=new Date();
+let reg=/abc/;
+
+console.log(typeof(fn));  //function
+console.log(typeof(obj));  //object
+console.log(typeof(arr));  //object
+console.log(typeof(now));  //object
+console.log(typeof(reg));  //object
+```
+
+- **xx instanceof xx**
+
+返回true/false，**只能判断引用类型** ，无法检测基本类型
+
+判断原理：判断一个构造函数的prototype属性所指向的对象是否存在另外一个要检测对象的原型链上。简单来说：能验证new构造函数创建出来的实例，左边的对象是否是右边的类的实例，**属于验证式判断类型**
+
+缺点：**只能用来判断两个对象是否属于实例关系**， 而不能判断一个对象实例具体属于哪种类型（原型链上的都会返回true）
+
+```js
+console.log('abc' instanceof String);// false 
+console.log( String('abc') instanceof String);// true 
+
+console.log(12 instanceof Number);// false 
+console.log(new Number(12) instanceof Number);// true 
+
+console.log(true instanceof Boolean);// false 
+console.log(new Boolean(true) instanceof Boolean);// true 
+
+console.log({name:'yy'} instanceof Object);// true 
+console.log(new Object({name:'yy'}) instanceof Object);// true 
+
+console.log(['12','123'] instanceof Object);// true 
+console.log(['12','123'] instanceof Array);// true 
+console.log(new Array('12',32) instanceof Object);// true 
+console.log(new Array('12',32) instanceof Array);// true 
+
+console.log(function(){} instanceof Object);// true 
+console.log(function(){} instanceof Function);// true 
+console.log(new Function() instanceof Function);// true 
+
+console.log(new Date() instanceof Object);// true 
+console.log(new RegExp instanceof Object);// true 
+
+console.log(new String('abc') instanceof Object);// true 
+console.log(new Number(12) instanceof Object);// true
+
+console.log(null instanceof Object);  //false
+console.log(undefined instanceof Object);  //false
+console.log(Symbol(2) instanceof Object);  //false
+console.log(BigInt(2) instanceof Object);  //false
+```
+
+
+
+- **xx.constructor === xx**
+
+返回true/false，判断原理：
+
+当一个函数F被定义时，JS引擎会为F添加prototype原型，然后再在prototype上添加一个constructor属性，并让其指向F的引用
+
+具体来说：当 var f = new F() 时，F被当成了构造函数，f是F的实例对象，**此时F原型上的constructor传递到了f上，因此f.constructor === F**
+
+缺点：不可判断Null、Undefined是无效的对象，**没有constructor存在**
+
+constructor 是不稳定的，如创建的对象更改了原型，无法检测到最初的类型
+
+```js
+console.log("abc".constructor===String);  //true
+console.log(new Number(2).constructor===Number);  //true
+console.log([1,2,3].constructor===Array);  //true
+console.log(false.constructor===Boolean);  //true
+console.log(new Function().constructor===Function);  //true
+console.log(new Date().constructor===Date);  //true
+console.log(/abc/.constructor===RegExp);  //true
+
+console.log(document.constructor===HTMLDocument);  //true
+```
+
+- **Object.prototype.toString.call(xx)**
+
+返回“[object type]”（字符串），能判断所有类型，万金油方法
+
+判断原理：JS中的所有对象都是继承自Object对象的，通过call方法（显式绑定）改变this指向，利用Object.prototype上的原生toString()方法判断数据类型
+
+```js
+console.log(Object.prototype.toString.call(123));  // [object Number]
+console.log(Object.prototype.toString.call("abc"));  //[object String]
+console.log(Object.prototype.toString.call(undefined));  //[object Undefined]
+console.log(Object.prototype.toString.call(null));  //[object Null]
+console.log(Object.prototype.toString.call(false));  //[object Boolean]
+
+console.log(Object.prototype.toString.call(Symbol(2)));  //[object Symbol]
+console.log(Object.prototype.toString.call(100n));  //[object BigInt]
+
+console.log(Object.prototype.toString.call({}));  //[object Object]
+console.log(Object.prototype.toString.call([]));  //[object Array]
+
+console.log(Object.prototype.toString.call(new Date()));  //[object Date]
+console.log(Object.prototype.toString.call(new RegExp("abc","g")));  //[object RegExp]
+
+console.log(Object.prototype.toString.call(function(){}));  //[object Function]
+```
+
+-----
+
+## 1.4 请问===与==有何区别？相等与全等的区别
+
+==：相等(值)
+
+**先转换再比较**（强制转换）
+
+- 有布尔值，把false->0， true->1， 调用Number()方法
+- 字符串 和 数值，字符串转数值 ；调用Number()方法
+- 对象 和 非对象，调用对象的valueOf()和toString()方法把对象转换成基础类型的值再比较，除Date对象外，会优先尝试使用valueOf()方法
+- 有一个是NaN， 则返回false。 即使两个都是NaN，也返回false，因为按照规则，NaN不等于NaN
+- 两个操作数都是对象，则比较他们是不是同一个对象，如果指向的是同一个对象，则返回ture 因为对象存的是地址值
+- 比较相等性之前， 不能将 null和 undefined转换成其他任何值
+
+```bash
+> 1==true
+true
+> 2==false
+false
+> 2===true
+false
+> 1=="1"
+true
+> []==""
+true
+> []==false
+true
+> []=={}
+false
+> []==[]
+false
+> {}=={}
+false
+> null==undefined
+true
+> 1==NaN
+false
+> 0==undefined
+false
+> 0==null
+false
+
+> false==0
+true
+> false==null
+false
+> false==undefined
+false
+
+
+```
+
+**=== ： 全等(类型和值）**
+
+**先判断类型再比较**， 类型不同直接不等，不转换类型
+
+```bash
+> 0===0
+true
+> []===[]
+false
+> 2===2
+true
+```
+
+---
+
+## 1.5 请问你了解js作用域吗？
+
+**1，js作用域**
+
+作用域：在运行时代码中的某些特定部分中变量、函数和对象的可访问性。换句话说，作用域决定了代码区块中变量和其他资源的可见性，作用域就是一个独立的地盘，让变量不会外泄、暴露出去。**作用域最大作用**：隔离变量，不同作用域下同名变量不会有冲突
+
+作用域是分层的，内层作用域可以访问外层作用域的变量，反之不行
+
+**2， JavaScript 没有块级作用域（ES6之前）**，只有全局作用域和函数作用域，ES6引入块级作用域（相关知识会在第5章中分析）
+
+全局作用域（浏览器）：window
+
+最外层函数 和在最外层函数外面定义的变量拥有全局作用域
+
+所有末定义直接赋值的变量自动声明为拥有全局作用域
+
+所有window对象的属性拥有全局作用域，如window.name、window.location、window.top等
+
+nodejs 的全局对象：global，**声明全局变量的方式为: global.变量名**
+
+在各个模块下都可以直接访问 global 对象
+
+一个文件就是一个模块，通过 require 引入模块
+
+函数作用域：
+
+声明在函数内部的变量
+
+**3，作用域链**
+
+当我们需要某个变量的值时，先去它最近的作用域去找，如果找不到，就找它的上级作用域，依次类推，直到找到全局，如全都未定义，那就抛出一个错误，如下代码所示
+
+```js
+var a = 1
+function A(){
+    function B(){
+        console.log(a);
+    }
+    return B();
+}
+A();//1
+
+```
+
+常见面试题：
+
+```js
+var a=10;
+function A(){
+    alert(a);
+};
+function B(){
+    var a=20;
+    A();
+}
+B();//10
+
+```
+
+为什么输出10，而不是20？**js中变量的作用域链与定义时的环境有关，与执行时无关**。调用函数B，B中调用了函数A，函数A里面没定义变量a，函数A只是被B调用且不传参，因此函数A无权使用函数B的局部变量a，而在上方还有一个全局变量a，因此这里输出10
+
+---
+
+## 1.6 请问什么是变量提升？什么是函数提升？
+
+js区别于C、C++、Java语言，在ES6之前，JavaScript没有块级作用域，只有**全局作用域**和**函数作用域**。
+
+这题在面试时尽量用具体代码举例说明
+
+先看下面代码：
+
+```js
+console.log(a);
+
+var a=2;  //undefined
+```
+
+变量 a 在使用前没有先进行声明，会抛出 ReferenceError异常?还是输出 2 ？事实上都不对，正确答案是输出 undefined（已声明未定义值）
+
+这就是一个典型的 **变量提升** 现象
+
+js 实际上会将 var a = 2 看成两个声明： var a和 a = 2。第一个定义声明在**编译阶段**进行，**第二个赋值声明被留在原地等待执行阶段**
+
+因此上面代码会以如下形式进行处理：
+
+```js
+var a; 
+console.log(a); 
+a = 2;
+```
+
+所有的声明（变量和函数）都会被“移动”到各自作用域的最前端，这个过程被称为 **变量（函数）提升**
+
+再看一个高频考题：
+
+```js
+var a=true;
+
+foo();  //undefined
+
+function foo(){   //函数声明
+	if (a) {
+		var a=10;
+	}
+	console.log(a);
+}
+```
+
+最终的答案是 undefined，代码实际js执行情况如下：
+
+```js
+function foo() { 	
+    var a; 	
+    if(a) { 		
+    	a = 10; 	
+    } 	
+    console.log(a); 
+} 
+var a;  
+a = true;  
+foo();
+
+```
+
+首先， foo(...) {} 的位置被移到了 foo();的前面，**这是函数发生了提升**，在 foo(...) {} 中，为什么会输出 undefined，而不是10？
+
+原因：**JavaScript 中没有块级作用域，**所以 var a = 10会被 JavaScript 分为两步：var a; 会被提升到函数作用域中的最顶端，声明了一个局部变量 a，在 foo(...) {} 的函数作用域中，**这个重名局部变量 a 会屏蔽全局变量 a**，换句话说，在对 a 的赋值声明之前，在 foo(...) {}中，a 的值都是 undefined，无法进入 if(a) {...} 中，所以最后打印出来 undefined
+
+注意：在 JavaScript 中，函数有两种方式进行声明，函数声明会被提升，**但函数表达式却不会被提升**
+
+```js
+var a = true; 
+foo();  //TypeError: foo is not a function
+
+var foo = function() { 	//函数表达式
+    if(a) { 		
+    	var a = 10; 	
+	} 	
+	console.log(a); 
+}
+
+```
+
+```js
+var a; 
+var foo；  
+a = true; 
+foo();  
+foo = function() { 
+    if(a) {      
+    	var a = 10;    
+    } 
+    console.log(a); 
+}
+```
+
+当执行到foo()时，foo 还没有赋值（如果它是一个函数声明而不是函数表达式，那么就会赋值）。foo()对 undefined 值进行函数调用而导致非法操作，因此会抛出 TypeError 异常
+
+函数优先：函数声明和变量声明都会被提升。**但函数会首先被提升，然后才是变量提升**
+
+```js
+foo();  // 1
+
+function foo(){  //函数声明
+	console.log("1");
+}
+
+foo();  // 1
+
+var foo = function() { 	//函数表达式
+	console.log("2"); 
+}
+
+
+foo();  //2
+```
+
+输出 1 而不是 2！这段代码片段会被引擎理解为：
+
+```js
+function foo() { 	
+    console.log('1'); 
+}  
+var foo;
+foo();  
+foo = function() {
+ 	console.log('2'); 
+ }
+```
+
+---
+
+## 1.7 请问js有哪些常见报错类型？它们有什么区别？
+
+在js中常有6种错误类型：TypeError、ReferenceError、SyntaxError、RangeError、EvalError、URIError。其中 TypeError 和 ReferenceError 日常开发会经常碰到。
+
+**TypeError：**类型错误(调用不存在的方法)，变量或参数不是预期类型时发生的错误
+
+```js
+var a;
+
+console.log(a.b); //TypeError: Cannot read properties of undefined (reading 'b')
+```
+
+变量 a 存在，但a的b属性不存在
+
+**ReferenceError：**引用错误(要用的变量没找到)
+
+```js
+console.log(b)  //ReferenceError: b is not defined
+```
+
+对 b 进行 RHS查询，在所有嵌套作用域中遍寻不到变量
+
+**SyntaxError：**语法错误（给关键字赋值、变量名不符合规范）
+
+```js
+//var 1;  //SyntaxError: Unexpected number
+
+function=1;  //SyntaxError: Unexpected token '='
+```
+
+**RangeError：**范围错误(参数超范围)，主要有：数组长度为负数、Number对象的方法参数超出范围、函数堆栈超过最大值
+
+```js
+// 1、数组长度为负数
+[].length = -5      // Uncaught RangeError: Invalid array length
+
+// 2、Number对象的方法参数超出范围
+var num = new Number(12.34)
+console.log(num.toFixed(-1))   //RangeError: toFixed() digits argument must be between 0 and 100    at Number.toFixed (<anonymous>)
+
+```
+
+**EvalError：**非法调用 eval()，eval()函数没有被正确执行
+
+```js
+var myEval = eval;
+myEval("alert('call eval')");
+// 需要注意的是：ES5以上的JavaScript中已经不再抛出该错误，但依然可以通过new关键字来自定义该类型的错误提示。
+
+new Error([message[fileName[lineNumber]]])
+// 第一个参数是错误提示信息，第二个是文件名，第三个是行号。
+
+```
+
+**URIError：**URI不合法，相关函数的参数不正确。
+
+```js
+decodeURI("%")     // URIError: URI malformed
+```
+
+---
+
+### **1、什么是LHS和RHS查询？**
+
+如上所说，对于var a = 2， js引擎会将它分为两步完成：var a 和 a = 2
+
+变量的赋值操作会执行两个动作：首先编译器会在当前作用域中声明一个变量（如果之前没有声明过），然后在运行时引擎会在引用域中查找该变量，如果能够找到就会对它赋值
+
+LHS和RHS就是js对变量的两种查找操作， 查找的过程是由作用域（词法作用域）进行协助，在编译的第二步中执行
+
+LHS（Left-hand Side）和RHS（Right-hand Side）通常是指等号（赋值运算）的**左右边的查询**，但并不一定意味就是"="的左侧和右侧，赋值操作还有其他几种形式，因此在概念上最好将其理解为：“赋值操作的目标是谁（LHS）”以及“谁是赋值操作的源头（RHS）”
+
+可以参考下面代码加以理解：
+
+```js
+function foo(a) { 	
+    var b = a; 	
+    return a + b; 
+}  
+var c = foo(2);
+```
+
+代码中一共有3个LHS查询和4个RHS查询
+
+LHS：
+
+```
+第2、5行中的b = ...、c = ...，变量在赋值操作的左边，对 b、c 需要 LHS 查询
+
+第5行调用 foo(2) 时，需要将实参2赋值给形参a，所以对 a 需要 LHS 查询
+```
+
+RHS：
+
+```
+第2行 b = a， a 在赋值操作的右边，需要知道 a的值，对 a 需要 RHS 查询
+
+第3行 reutrn a + b， 需要知道 a 和 b 的值， 分别对 a 和 b 都进行 RHS 查询
+
+第6行 c = foo(2)，foo(2) 在赋值操作的右边，需要知道 foo(2)的值，对 foo(2) 需要 RHS 查询
+```
+
+当**RHS****查询不成功**时：会抛出 ReferenceError异常
+
+当**LHS查询不成功**时：会自动隐式地创建一个全局变量（非严格模式下），该变量使用LHS查询的目标作为标识符，或者抛出 ReferenceError 异常（严格模式下）
+
+---
+
+## 2.1 请问你了解js中的闭包吗？
+
