--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -3147,3 +3147,624 @@ console.log(person.age);  //66
 
 ---
 
+## 3.1 请问你了解js中的this绑定机制吗？
+
+this特点：
+
+1. this是js的关键字之一，它是对象自动生成的一个内部对象，只能在对象内部使用
+2. 随着使用场合的不同，this的值会发生变化，并不是一成不变的
+3. this指向完全取决于：什么地方以什么方式调用，而不是 创建时
+
+this 4种绑定机制：默认绑定、隐式绑定、显示绑定、new绑定，箭头函数的this不适用于这4种绑定机制，需要单独分析，将会在后续ES6新特性章节中做重点分析
+
+### 1.默认绑定
+
+（函数调用时无任何调用前缀的情景）  没有其他绑定规则存在时的默认规则，也是函数调用中最常见情况
+
+```js
+function fn1(){
+  let fn2=function(){
+    console.log(this);  //Window
+    fn3();
+  };
+  console.log(this);  //Window
+  fn2();
+};
+
+function fn3(){
+  console.log(this);  //Window
+};
+
+fn1();
+
+/*
+<ref *1> Object [global] {
+  global: [Circular *1],
+  clearInterval: [Function: clearInterval],
+  clearTimeout: [Function: clearTimeout],
+  setInterval: [Function: setInterval],
+  setTimeout: [Function: setTimeout] {
+    [Symbol(nodejs.util.promisify.custom)]: [Getter]
+  },
+  queueMicrotask: [Function: queueMicrotask],
+  performance: Performance {
+    nodeTiming: PerformanceNodeTiming {
+      name: 'node',
+      entryType: 'node',
+      startTime: 0,
+      duration: 107.68200016021729,
+      nodeStart: 0.7476000785827637,
+      v8Start: 7.08810019493103,
+      bootstrapComplete: 55.69720005989075,
+      environment: 25.186300039291382,
+      loopStart: -1,
+      loopExit: -1,
+      idleTime: 0
+    },
+    timeOrigin: 1652074920565.308
+  },
+  clearImmediate: [Function: clearImmediate],
+  setImmediate: [Function: setImmediate] {
+    [Symbol(nodejs.util.promisify.custom)]: [Getter]
+  }
+}
+*/
+```
+
+代码中无论函数声明在哪，在哪调用，由于函数调用时前面并未指定任何对象，这种情况下this指向全局对象window
+
+注意：在严格模式下（use strict），全局对象将无法使用默认绑定，会报undefined错误
+
+```js
+function fn1(){
+  console.log(this);  //Window
+  console.log(this.a);  // 1
+}
+
+function fn2(){
+  "use strict";
+  console.log(this);  //undefined
+  console.log(this.a);  // Uncaught TypeError: Cannot read properties of undefined (reading 'a')
+}
+
+var a=1;
+
+fn1();
+fn2();
+
+```
+
+### 2.隐式绑定
+
+在函数调用时，前面存在调用它的对象，即函数的调用是在该对象上触发的，调用位置上存在上下文对象，那this就会隐式绑定到该对象上
+
+```js
+function foo(){
+	console.log(this.a);
+}
+
+var a=2;
+var obj={
+	a:3,
+	foo:foo
+};
+
+obj.foo();  // 3
+```
+
+代码中foo函数被当做引用属性，被添加到obj对象上。调用过程：获取obj.foo属性→ 根据引用关系找到foo函数，执行调用
+
+这里对foo的调用存在上下文对象obj，**this进行了隐式绑定，即this绑定到了obj上，this.a被解析成了obj.a**
+
+多层调用链（面试高频考题）（函数调用前存在多个对象，**this指向距离调用自己最近的对象**）
+
+```js
+function foo(){
+	console.log(this.a);
+}
+
+var a=2;
+
+var obj1={
+	a:4,
+	foo:foo
+};
+
+var obj2={
+	a:3,
+	obj1:obj1,
+	foo:foo
+};
+
+foo();  // 2
+obj1.foo();  // 4
+obj2.foo();  // 3
+obj2.obj1.foo();  //4
+```
+
+代码中调用链不只一层，存在obj1、obj2两个对象，先获取obj2.obj1→通过引用获取到obj1对象，再访问 obj1.foo →最后执行foo函数调用，获取最后一层调用的上下文对象，即obj1，所以结果是4（obj1.a）
+
+#### 隐式丢失
+
+在一些特殊情况下，会存在隐式绑定丢失问题，最常见：参数传递、变量赋值
+
+**参数传递**
+
+```js
+function foo(){
+	console.log(this.a);
+}
+
+function fn1(param){
+	param();
+}
+
+var a=2;
+
+var obj1={
+	a:4,
+	foo:foo
+};
+
+fn1(obj1.foo);  // 2
+```
+
+代码中将 obj.fn 作为参数传递进 fn1 中执行，**只是单纯地传递了一个函数而已**，this并没有跟函数绑在一起，**发生了隐式丢失**，this依旧指向window
+
+**变量赋值（本质上与传参相同）**
+
+```js
+function foo(){
+  console.log(this.a);
+}
+
+var a=2;
+
+var obj1={
+  a:4,
+  foo:foo
+};
+
+let fn1=obj1.foo;
+fn1();  // 2
+
+```
+
+### 3.显式绑定（call、apply、bind）
+
+```js
+function foo(){
+	console.log(this.a);
+}
+
+var a=4;
+
+let obj1={
+	a:1,
+};
+let obj2={
+	a:2,
+};
+let obj3={
+	a:3,
+};
+
+foo();  // 4
+foo.call(obj1);  // 1
+foo.apply(obj2);  // 2
+foo.bind(obj3)();  // 3
+
+foo.apply(null);  // 4
+foo.apply(undefined);  // 4
+foo.bind(null)();  // 4
+foo.bind(undefined)();  // 4
+```
+
+代码中，我们分别通过call、apply、bind改变了函数fn的this指向
+
+通常，js中调用一个函数时（函数调用），函数处于一个被动的状态，**而call与apply让函数从被动变主动**，函数能主动选择自己的上下文，这种写法又称之为**函数应用**
+
+注意：若使用函数应用的方法改变this指向时，指向参数是null或者undefined，那么 this 将指向全局对象
+
+### 4.new 绑定
+
+```js
+function Fn(){
+	this.a=1;
+}
+
+let obj=new Fn();
+
+console.log(obj.a);  // 1
+```
+
+代码中，构造函数调用创建了一个新对象obj，而在函数体内，this将指向新对象obj上（可以抽象理解为新对象就是this）
+
+---
+
+**this绑定优先级**
+
+如果一个函数调用存在多种绑定方法，this最终指向是什么呢？this绑定优先级为：
+
+显式绑定 > 隐式绑定 > 默认绑定
+
+new绑定 > 隐式绑定 > 默认绑定
+
+注意：不存在显式绑定和new绑定同时生效的场景，若同时写会直接报错
+
+---
+
+### **1、作用域链与原型链有什么区别？**
+
+作用域链：当**访问一个变量**时，首先在当前作用域查找标识符，如果没有找到就去父作用域找，作用域链顶端是全局对象window，如果window都没有这个变量则**报错**
+
+原型链：当**在对象上访问某属性**时，首先会查找当前对象，如果没有就顺着原型链往上找，原型链顶端是null，如果全程都没找到则**返回undefined**，而不是报错
+
+---
+
+## 3.2 请问call、apply与bind有什么区别？
+
+call、apply与bind：都能用于改变this绑定
+
+**apply与call：**
+
+都是函数应用，指定this的同时也会执行函数，参数传递方式不同
+
+call与apply的绑定**只适用当前调用，调用完毕即失效**，下次要用还得重新绑
+
+**call：**接受一个参数列表，第一个参数指向this，其余的参数在函数执行时都会作为函数形参传入函数
+
+**apply：**除了第一个参数作为this指向外，其它参数都被包裹在一个**数组**中，在函数执行时同样会作为形参传入
+
+```js
+let o = {
+    a: 1
+};
+function fn(b, c) {
+    console.log(this.a + b + c);
+};
+// fn.call(this, arg1, arg2, ...);
+fn.call(o, 2, 3); // 6
+// fn.apply(this, [arg1, arg2, ...]);
+fn.apply(o, [2, 3]); // 6
+```
+
+**bind：**
+
+绑定this后并不会立马执行，而是**返回一个全新的boundFcuntion绑定函数**
+
+bind属于**硬绑定**，返回的boundFunction的this指向无法再次通过bind、apply或 call 修改
+
+```js
+let obj1={
+	a:1
+}
+let obj2={
+	a:2
+}
+
+function fn(b,c){
+	console.log(this.a + b + c);
+}
+
+let fn1=fn.bind(obj1,2,3);
+
+fn1();  //6
+
+//尝试再次传入形参
+fn1(4,4);  // 6
+
+//尝试改变this
+fn1.call(obj2);  //6
+```
+
+代码中， 当执行fn1时，本质上等于window.fn1()，如果this还能被改变，那this岂不是得指向window，那bind方法就毫无意义了
+
+----
+
+## 3.3 请问什么是浅拷贝？什么是深拷贝？两者有何区别？
+
+深拷贝与浅拷贝简单区分方法：假设B复制了A，当修改A时，B是否改变，若B也跟着变化，说明是**浅拷贝**；若B没变化，则是**深拷贝**
+
+注意：一般情况下，**深拷贝只针对较为复杂的object类型数据**
+
+在js中， 分基本数据类型与引用数据类型，这两类数据存储分别是：
+
+**基本数据类型**：名与值都存储在**栈内存**中，例如let a=1：
+
+| 名   | 值   |
+| ---- | ---- |
+| a    | 1    |
+
+当b=a时，b复制了a的值，栈内存会新开辟一个内存给b，例如：
+
+| 名   | 值   |
+| ---- | ---- |
+| a    | 1    |
+| b    | 1    |
+
+当修改a=2时，对b并不会造成影响，因为此时的b具有独立的存储空间，不受a的影响了
+
+----
+
+**引用数据类型**：名存在**栈内存**中，值存在于**堆内存**中，栈内存会提供一个引用的地址指向堆内存中的值
+
+![img](https://uploadfiles.nowcoder.com/images/20210930/897353_1632990546361/CED43FA80498C5A06F84AEBC056ECA6F)
+
+当b=a时，其实b复制了a的引用地址，而并非堆内存中的值
+
+![img](https://uploadfiles.nowcoder.com/images/20210930/897353_1632990559186/967F55AE7D26B8CCB6590C26CFCDAD2B)
+
+而当a[0]=1时进行数组修改时，由于a与b指向的是同一个地址，自然b也受影响，这就是所谓的浅拷贝
+
+![img](https://uploadfiles.nowcoder.com/images/20210930/897353_1632990569165/E829A2CEBAE11215E510B538F34432B5)
+
+----
+
+## 3.4 请问js如何实现深拷贝？
+
+1. 递归复制所有层级属性
+
+   （面试高频撕代码题）
+
+可理解为一层层地复制对象中的属性， 直到值为基础类型，缺点：代码较为复杂
+
+```js
+//使用递归的方式实现数组、对象的深拷贝
+
+function deepClone(obj){
+	//判断拷贝的要进行深拷贝的是数组还是对象，是数组的话进行数组拷贝，对象的话进行对象拷贝
+	var objClone=Array.isArray(obj) ? [] : {};
+	//进行深拷贝的不能为空，并且是对象
+	if (obj && typeof obj === "object") {
+		for (key in obj){
+			if (obj.hasOwnProperty(key)) {
+				if (obj[key] && typeof obj[key] === "object") {
+					objClone[key]=deepClone(obj[key]);
+				}else{
+					objClone[key]=obj[key];
+				}
+			}
+		}
+	}
+	return objClone;
+}
+
+let obj1={
+	a:1,
+	b:{
+		c:2
+	},
+	d:[3,4,5],
+	e:true
+}
+
+let obj2=deepClone(obj1);
+
+obj2.b.c=66;
+
+console.log(obj1.b.c);  //2
+console.log(obj2.b.c);  //66
+```
+
+2. 借助JSON对象的parse和stringify
+
+利用js的内置对象JSON来进行数组对象的深拷贝，缺点：无法实现对象中方法的深拷贝
+
+```js
+function deepClone(obj){
+	var _obj=JSON.stringify(obj);
+	var objClone=JSON.parse(_obj);
+	return objClone;
+}
+```
+
+stringify() → JavaScript对象序列化为JSON字符串
+
+parse() → 把JSON字符串解析为原生JavaScript值
+
+3. 通过jQuery的extend方法
+
+```js
+var array = [1,2,3,4];
+var newArray = $.extend(true,[],array);    
+```
+
+4. Object.assign()拷贝
+
+当对象中只有一级属性，没有二级属性的时候，此方法为深拷贝，但是对象中有对象的时候，此方法，在二级属性以后就是浅拷贝
+
+```js
+
+let obj1={
+	a:1,
+	b:{
+		c:2
+	},
+	d:[3,4,5],
+	e:true
+}
+
+let obj2=Object.assign(obj1);
+
+obj2.b.c=66;
+obj2.a=10;
+
+console.log(obj1.a);  //10
+console.log(obj2.a);  //10
+console.log(obj1.b.c);  //66
+console.log(obj2.b.c);  //66
+```
+
+5. lodash函数库
+
+lodash是一个很热门的函数库，可利用lodash.cloneDeep()[实现深拷贝](https://www.lodashjs.com/docs/lodash.cloneDeep#_clonedeepvalue)
+
+```bash
+$ cnpm i lodash --save
+```
+
+
+
+```js
+var _ = require("lodash");
+
+let obj1={
+	a:1,
+	b:{
+		c:2
+	},
+	d:[3,4,5],
+	e:true
+}
+
+let obj2=_.cloneDeep(obj1);
+
+obj2.b.c=66;
+obj2.a=10;
+
+console.log(obj1.a);  //1
+console.log(obj2.a);  //10
+console.log(obj1.b.c);  //2
+console.log(obj2.b.c);  //66
+```
+
+
+
+---
+
+## 3.5 请问js如何判断一个变量是空对象？
+
+**1.for in** 
+
+利用for in 循环遍历对象和对象原型上的**可枚举属性**
+
+缺点：只能遍历可枚举属性，若一个对象上只有不可枚举属性的话，会判断错误
+
+```js
+function isEmptyObj(obj){
+	for (let i in obj){
+		return false;  //能遍历，不为空
+	}
+	return true;
+}
+
+let a={};
+let b=[];
+let c="";
+
+console.log(isEmptyObj(a));  // true
+console.log(isEmptyObj(b));  // true
+console.log(isEmptyObj(c));  // true
+```
+
+
+
+  **2.** **Object.keys()** 
+
+```js
+console.log(Object.keys(obj).length===0)
+```
+
+Object.keys能返回对象自身上所有可枚举属性的名称所构成的数组，若数组长度为0，那就是一个空对象
+
+缺点：如for in断一样，Object.keys方法也只返回可枚举属性
+
+```js
+let a={};
+let b=[];
+let c="";
+
+console.log(Object.keys(a).length===0);  // true
+console.log(Object.keys(b).length===0);  // true
+console.log(Object.keys(c).length===0);  // true
+```
+
+  **3. 将对象转化为json字符串**
+
+```js
+console.log(JSON.stringify(obj)==='{}')
+```
+
+```js
+let a={};
+let b=[];
+let c="";
+
+console.log(JSON.stringify(a));  // {}
+console.log(JSON.stringify(b));  // []
+console.log(JSON.stringify(c));  // ""
+```
+
+  **4.** **Object.getOwnPropertyNames()**
+
+```js
+console.log(Object.getOwnPropertyNames(obj).length == 0)
+```
+
+Object.getOwnPropertyNames方法获取到对象中的属性名，存到一个数组中，返回数组对象，若数组长度为0，则是空对象
+
+缺点：此方法是Object.keys的改进，可获取到不可枚举属性，**但该方法无法获取Symbol属性**
+
+```js
+let a={
+	[Symbol("a")]:1
+};
+let b=[];
+let c="";
+
+console.log(Object.getOwnPropertyNames(a).length===0);  // true
+console.log(Object.getOwnPropertyNames(b).length===0);  // false
+console.log(Object.getOwnPropertyNames(c).length===0);  // false
+```
+
+  **5. Reflect.ownKeys()**
+
+```js
+console.log(Reflect.ownKeys(obj).length===0)
+```
+
+Reflect.ownKeys也可以返回对象自身属性名所构成的数组，该方法可以返回不可枚举属性以及Symbol属性
+
+```js
+let a={
+	[Symbol("a")]:1
+};
+let b=[];
+let c="";
+
+console.log(Reflect.ownKeys(a).length===0);  // false
+console.log(Reflect.ownKeys(b).length===0);  // true
+console.log(Reflect.ownKeys(c).length===0);  // TypeError: Reflect.ownKeys called on non-object
+```
+
+---
+
+### **1、什么可枚举属性？什么是不可枚举属性？**
+
+可枚举属性是指内部可枚举标志（enumerable）设置为true的属性，不可枚举属性即是enumerable为false（摘自MDN）
+
+---
+
+### **2、js遍历对象各个方法区别总结**
+
+| 方法                           | 基本属性 | 原型链属性 | 不可枚举属性 | symbol属性 |
+| ------------------------------ | -------- | ---------- | ------------ | ---------- |
+| for in                         | ✔        | ✔          | ✖            | ✖          |
+| Object.keys()                  | ✔        | ✖          | ✖            | ✖          |
+| Object.getOwnPropertyNames()   | ✔        | ✖          | ✔            | ✖          |
+| Object.getOwnPropertySymbols() | ✖        | ✖          | ✔            | ✔          |
+| Reflect.ownKeys()              | ✔        | ✖          | ✔            | ✔          |
+
+**for in （遍历key）**：可遍历到原型对象上的属性 ，用hasOwnProperty()方法过滤, 可遍历得到字符串类型的键值，通常不适用于数组遍历
+
+**Object.values() 、Object.keys() ：**可自动过滤原型链上的属性
+
+**Object.getOwnPropertyNames()：**可遍历不可枚举的属性
+
+**Reflect.ownkeys()：** 可遍历不可枚举的属性 和 Symbol属性
+
+---
+
+## 3.6 请问js有哪些遍历数组的方法？
+
