--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -3768,3 +3768,446 @@ console.log(Reflect.ownKeys(c).length===0);  // TypeError: Reflect.ownKeys calle
 
 ## 3.6 请问js有哪些遍历数组的方法？
 
+ **1.** **for循环**
+
+用临时变量将长度缓存起来，避免重复获取数组长度，当数组较大时优化效果比较明显，写法比较繁琐
+
+```js
+for(let j = 0,len=arr.length; j < len; j++) {
+    
+}
+```
+
+  **2.** **forEach（）**
+
+遍历数组中的每一项，没有返回值，即使有return，也不会返回任何值，对原数组没有影响，不支持IE浏览器，执行速度比map()快
+
+```js
+//参数：item数组中的当前索引的值, index当前项的索引, array原始数组
+arr.forEach((item,index,array)=>{
+    
+})    
+```
+
+  **3.** **map（）**
+
+创建一个新的数组，新数组的每一个元素由调用数组中的每一个元素执行提供的函数得来，有return返回值
+
+return的意义：不影响原来的数组，**只是把原数组克隆一份**，改变克隆的数组中的对应项
+
+```js
+let a=[1,2,3,4,5];
+
+let b=a.map((item,index,arr)=>{
+	return item**2;
+});
+
+console.log(a);  //[ 1, 2, 3, 4, 5 ]
+console.log(b);  // [ 1, 4, 9, 16, 25 ]
+```
+
+
+
+  **5.** **for of**
+
+遍历value，适用遍历数组对象、字符串、map、set等**拥有迭代器对象**的集合，**不能遍历对象**，因为没有迭代器
+
+与forEach()区别：可以正确响应break、continue和return语句
+
+与for in 区别：无法循环遍历对象，不会遍历自定义属性
+
+```js
+for (var value of arr) { 
+    console.log(value); 
+}
+
+let a=[1,2,3,4,5];
+
+for (let i of a){
+	console.log(i);  // 1 2 3 4 5
+}
+
+let obj={
+	a:1,
+	b:2
+}
+
+for (let o of obj){  //TypeError: obj is not iterable
+	console.log(o);
+}
+```
+
+  **6.** **reduce()**
+
+接收一个函数作为累加器，数组中的每个值（从左到右）开始缩减，得出最终计算值
+
+相当于：为数组中的每一个元素依次执行回调函数，不包括数组中被删除或从未被赋值的元素
+
+```js
+arr.reduce(function(total, currentValue, currentIndex, arr), initialValue)
+```
+
+
+
+各参数意义：
+
+| function()   | 必需 | 用于执行每个数组元素的函数     |
+| ------------ | ---- | ------------------------------ |
+| total        | 必需 | 初始值, 或者计算结束后的返回值 |
+| currentValue | 必需 | 当前元素                       |
+| currentIndex | 可选 | 当前元素的索引                 |
+| arr          | 可选 | 当前元素所属的数组对象         |
+| initialValue | 可选 | 传递给函数的初始值             |
+
+一起看几个reduce()的实际应用（面试时可能要求撕代码）
+
+- **简单用法：数组求和，求乘积**
+
+```js
+let a=[1,2,3,4,5];
+
+console.log(a.reduce((prev,curr,index,arr)=>prev+curr));  //15
+console.log(a.reduce((prev,curr,index,arr)=>prev*curr));  //120
+
+```
+
+- **复杂用法：**
+
+计算数组中每个元素出现的次数
+
+```js
+let nums=[1,2,3,4,5,2,3,5];
+
+let ans=nums.reduce((prev,curr)=>{
+	if (curr in prev) {
+		prev[curr]++;
+	}else{
+		prev[curr]=1;
+	}
+	return prev;
+},{})
+console.log(ans);  //{ '1': 1, '2': 2, '3': 2, '4': 1, '5': 2 }
+
+```
+
+数组去重（ 面试高频撕代码题）
+
+```js
+let nums=[1,2,3,4,5,2,3,5];
+
+let ans=nums.reduce((prev,curr)=>{
+	if (!prev.includes(curr)) {
+		return prev.concat(curr);
+	}else{
+		return prev;
+	}
+},[])
+console.log(ans);  //[ 1, 2, 3, 4, 5 ]
+
+```
+
+将多维数组转化为一维（又名数组扁平化， 面试高频撕代码题）
+
+```js
+let nums=[1,2,3,[4,5,[2,3]],5];
+
+var FlatArr=function(arr){
+	return arr.reduce((prev,curr)=>prev.concat(Array.isArray(curr) ? FlatArr(curr) : curr),[]);
+}
+
+let ans=FlatArr(nums);
+console.log(ans);  //[1, 2, 3, 4, 5, 2, 3, 5 ]
+
+```
+
+---
+
+# js高级
+
+----
+
+## 4.1 请问什么是函数防抖？什么是函数节流？
+
+函数防抖(debounce)：触发高频事件后n秒内，函数只会执行一次，如果n秒内高频事件再次被触发，则重新计算时间
+
+函数节流(throttle)：高频事件触发，但在n秒内只会执行一次，所以节流会稀释函数的执行频率
+
+两者都是为了限制函数的执行频次，以优化函数触发频率过高导致的响应速度跟不上触发频率，出现延迟，假死或卡顿的现象
+
+可结合下图对两者进行区分：
+
+![img](https://uploadfiles.nowcoder.com/images/20211008/897353_1633667352451/6AF15ACD40C68A84BAD11D4A2F5981F6)
+
+**防抖：**
+
+实现思路：在事件被触发n秒后再执行回调函数，如果在这n秒内又被触发，则重新计时
+
+特点：如果事件在规定的时间间隔内被不断的触发，则调用方法被不断的延迟，当遇到不断触发但是仍然需要触发的情况，应该选用节流
+
+只有当高频事件停止，最后一次事件触发的超时调用才能在wait时间后执行
+
+```js
+function debounce(fn,wait){
+	var timeout;  //用来存放定时器的返回值，一触发就重新计时
+	return function(){
+		var context=this;
+		//把前一个 setTimeout clear 掉
+		clearTimeout(timeout);
+		//又创建一个新的 setTimeout,保障间隔时间内持续触发，不会执行fn函数
+		timeout=setTimeout(function(){
+			fn.apply(context);
+		},wait);
+	}
+}
+```
+
+**节流：**（每隔一段时间发一次 Ajax 请求，用节流）
+
+规定一个单位时间，在这个单位时间内，只能有一次触发事件的回调函数执行，如果在同一个单位时间内某事件被触发多次，只有一次能生效
+
+实现思路：通过判断是否到达一定时间来触发函数，若没到规定时间则使用计时器延后，而下一次事件则会重新设定计时器
+
+```js
+function throttle(fn,delay){
+	let canRun=true;  //通过闭包保存一个标记
+	return function(){
+		//在函数开头判断标记是否为true,不为true 则return
+		if (!canRun) {
+			return;
+		}
+		//立即设置为false
+		canRun=false;
+		//将外部传入的函数的执行放在setTimeout中
+		setTimeout(()=>{
+			//最后在setTimeout执行完毕后再把标记设置为true(关键)表示可以执行下一次循环了
+			//当定时器没有执行的时候标记永远是false,在开头被return掉
+			fn.apply(this,arguments);
+			canRun=true;
+		},delay);
+	};
+}
+```
+
+----
+
+## 4.2 请问js有哪些数组去重方法？
+
+### **1.for循环（两次嵌套）+ 新数组**
+
+```js
+let nums=[1,2,3,2,4,5,3,2];
+
+function removeRepeatElementOfArray(arr){
+	let flag=true;  //元素是否存在重复
+	const result=new Array();
+	for(let i=0;i<arr.length;i++){
+		flag=true;
+		for(let j=i+1;j<arr.length;j++){
+			if (arr[i]===arr[j]) {
+				//遇到重复的退出该次循环,即保留的是重复元素中最后面的一个
+				flag=false;
+				break;
+			}
+		}
+		if (flag) {  //如果从该元素往后没有重复
+			result.push(arr[i]);
+		}
+	}
+	return result;
+}
+
+console.log(removeRepeatElementOfArray(nums));  // [ 1, 4, 5, 3, 2 ]
+```
+
+涉及到多次遍历，执行时间较长
+
+```js
+let nums=[1,2,3,2,4,5,3,2];
+
+function removeRepeatElementOfArray(arr){
+	if (arr.length===0){
+		return arr;
+	}
+	let flag=true;  //元素是否存在重复
+	const result=new Array();
+	result.push(arr[0]);
+
+	for(let i=1;i<arr.length;i++){
+		flag=true;
+		for(let j=0;j<result.length;j++){
+			if (arr[i]===result[j]) {  //比较新数组中是否存在
+				//存在则退出该次循环
+				flag=false;
+				break;
+			}
+		}
+		if (flag) {  //不存在则加入
+			result.push(arr[i]);
+		}
+	}
+	return result;
+}
+
+console.log(removeRepeatElementOfArray(nums));  // [ 1, 2, 3, 4, 5 ]
+```
+
+### **2.for循环（两次嵌套）+ splice （ES5中最常用）**
+
+双层循环，外层循环元素，内层循环时比较值，值相同时，删除这个值
+
+```js
+let nums=[1,2,3,2,4,5,3,2];
+
+function removeRepeatElementOfArray(arr){
+	if (arr.length===0){
+		return arr;
+	}
+	for(let i=0;i<arr.length;i++){
+		for(let j=i+1;j<arr.length;j++){
+			if (arr[i]===arr[j]) {
+				//遇到重复的删除后一个
+				arr.splice(j,1);
+				j--;  //这个减一很关键
+			}
+		}
+	}
+	return arr;
+}
+
+console.log(removeRepeatElementOfArray(nums));  // [ 1, 2, 3, 4, 5 ]
+```
+
+### **3.for 循环（一次） + indexOf() + 新数组**
+
+对方法1进行改进，对新数组判定是否有该字符，可以调用 Array.prototype.indexOf 函数，执行时间缩减了很多
+
+```js
+let nums=[1,2,3,2,4,5,3,2];
+
+function removeRepeatElementOfArray(arr){
+	if (arr.length===0){
+		return arr;
+	}
+	const result=new Array();
+	for(let i=0;i<arr.length;i++){
+		if (result.indexOf(arr[i])===-1) {
+			result.push(arr[i]);
+		}
+	}
+	return result;
+}
+
+console.log(removeRepeatElementOfArray(nums));  // [ 1, 2, 3, 4, 5 ]
+```
+
+### **4.sort 排序后去重**
+
+利用sort()排序方法，然后根据排序后的结果进行遍历及相邻元素对比
+
+```js
+let nums=[1,2,3,2,4,5,3,2];
+
+function removeRepeatElementOfArray(arr){
+	if (arr.length===0){
+		return arr;
+	}
+	arr=arr.sort();
+	const result=new Array();
+	result.push(arr[0])
+	
+	for(let i=1;i<arr.length;i++){
+		if (arr[i]!==arr[i-1]) {
+			result.push(arr[i]);
+		}
+	}
+	return result;
+}
+
+console.log(removeRepeatElementOfArray(nums));  // [ 1, 2, 3, 4, 5 ]
+```
+
+### **5.Map哈希映射**
+
+利用 ES6 中的 Map 集合替代前面方法中的新数组，调用Map.has替代indexOf()，Map.set 替代push()，执行速度比前面的方法都要快
+
+```js
+let nums=[1,2,3,2,4,5,3,2];
+
+function removeRepeatElementOfArray(arr){
+	if (arr.length===0){
+		return arr;
+	}
+	let m=new Map();
+	const result=new Array();
+
+	for(let i=0;i<arr.length;i++){
+		if (m.has(arr[i])) {
+			//map.set(arr[i], true);
+			m.set(arr[i],m.get(arr[i])+1);  //可以查看重复元素及其次数
+		}else{
+			//map.set(arr[i], false);   // 如果没有该key值
+			m.set(arr[i],1);
+			result.push(arr[i]);
+		}
+	}
+	console.log(m);  //Map(5) { 1 => 1, 2 => 3, 3 => 2, 4 => 1, 5 => 1 }
+	return result;
+}
+
+console.log(removeRepeatElementOfArray(nums));  // [ 1, 2, 3, 4, 5 ]
+```
+
+### **6.new Set() + Array.from()**
+
+利用 ES6 中的 Set 集合，Set 集合是一种无重复元素的列表，new Set(arr)会自动剔除重复元素，Array.from(...)将 Set 集合转换为数组
+
+```js
+let nums=[1,2,3,2,4,5,3,2];
+
+function removeRepeatElementOfArray(arr){
+	return Array.from(new Set(arr));
+}
+
+console.log(removeRepeatElementOfArray(nums));  // [ 1, 2, 3, 4, 5 ]
+```
+
+### **7.new Set() + …(展开运算符)**
+
+思路与方法6一致，只是将 Set 集合转换为数组的实现方法从 Array.from(...) 改成了 ...(展开运算符)
+
+```js
+let nums=[1,2,3,2,4,5,3,2];
+
+function removeRepeatElementOfArray(arr){
+	return [...new Set(arr)];
+}
+
+console.log(removeRepeatElementOfArray(nums));  // [ 1, 2, 3, 4, 5 ]
+```
+
+### **8.for循环(一次) + 新对象**
+
+将创建一个新数组，改成创建一个新对象，判定对象的 key 值，存在跳过，不存在则将字符以对象的 key 值存储
+
+执行时间：所有的方法中最短的，**因为js对象的属性是基于Hash表实现**，对属性进行访问的时间复杂度可以达到O(1)，故此方法的时间复杂度为O(n) ；上述一般双重循环时间复杂度为O(n^2)
+
+```js
+let nums=[1,2,3,2,4,5,3,2];
+
+function removeRepeatElementOfArray(arr){
+	let obj={};
+	for (let i=0; i < arr.length; i++){
+		if (!obj[arr[i]]) {
+			obj[arr[i]]=1;
+		}
+	}
+	return Object.keys(obj);
+}
+
+console.log(removeRepeatElementOfArray(nums));  // [ '1', '2', '3', '4', '5' ]
+```
+
+---
+
+## 4.3 请问你了解js事件循环机制（Event Loop）吗？
+
