--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -11061,6 +11061,49 @@ let result=reorderLogFiles(logs);
 console.log(result);
 ```
 
+## 942.增减字符串匹配
+
+由范围 [0,n] 内所有整数组成的 n + 1 个整数的排列序列可以表示为长度为 n 的字符串 s ，其中:
+
+如果 perm[i] < perm[i + 1] ，那么 s[i] == 'I' 
+如果 perm[i] > perm[i + 1] ，那么 s[i] == 'D' 
+给定一个字符串 s ，重构排列 perm 并返回它。如果有多个有效排列perm，则返回其中 任何一个 。
+
+提示：
+
+1 <= s.length <= 105
+s 只包含字符 "I" 或 "D"
+
+```js
+/**
+ * @param {string} s
+ * @return {number[]}
+ */
+var diStringMatch = function(s) {
+    let ans=[];
+    let n=s.length;
+    let left=0,right=n;
+    for (let i=0;i<n;i++){
+        if (s[i]==="I") {
+            //比后一个小则加入当前没有加入最小的的一个
+            ans.push(left);
+            left++;
+        }else if(s[i]==="D"){
+            //比后一个大则加入当前没有加入最大的的一个
+            ans.push(right);
+            right--;
+        }
+    }
+    ans.push(left);  //或 ans.push(right);
+
+    return ans;
+};
+
+let s = "DDDII";
+let result=diStringMatch(s)
+console.log(result);
+```
+
 
 
 ## 954. 二倍数对数组
