--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -4211,3 +4211,299 @@ console.log(removeRepeatElementOfArray(nums));  // [ '1', '2', '3', '4', '5' ]
 
 ## 4.3 请问你了解js事件循环机制（Event Loop）吗？
 
+js是一门主要运行在浏览器的脚本语言，主要用途之一是操作DOM元素
+
+若js同时有两个线程，对同一个DOM元素进行操作，这时浏览器应该听哪个线程的？如何判断优先级？为了避免这种问题，js必须是一门单线程语言。
+
+**主线程**：即主线程会不停的从执行栈中读取事件，直至执行完所有栈中的同步代码
+
+**任务队列**：当遇到一个异步事件后，js并不会一直等待异步事件返回结果，而是会将这个事件挂在与执行栈不同的队列中，即任务队列
+
+**异步任务**：分为 宏任务（macrotask） 与 微任务 (microtask)，不同的API注册的任务会依次进入自身对应的队列中，然后等待 Event Loop 将它们依次压入执行栈中执行
+
+**常见宏任务**(macrotask)：
+
+script(整体代码)、setTimeout、setInterval、UI 渲染、 I/O、postMessage、 MessageChannel、setImmediate(Node.js 环境)
+
+**常见微任务**(microtask)：
+
+Promise、 MutaionObserver、process.nextTick(Node.js环境）
+
+Event Loop(事件循环)：宏任务 > 所有微任务 > 宏任务（主要针对V8）
+
+1. 执行栈选择最先进入队列的宏任务(通常是script整体代码)，如果有则执行
+2. 检查是否存在 Microtask，如果存在则不停地执行，直至清空 microtask 队列
+3. 更新render(每一次事件循环，浏览器都可能会去更新渲染)
+4. 重复以上步骤
+
+![img](https://uploadfiles.nowcoder.com/images/20211008/897353_1633673400290/7F695AB6524E72C0BC007BEFD17FC007)
+
+一起看两道经典面试题：（主要考察执行顺序问题，考察频率极高）
+
+```js
+//题目一
+
+setTimeout(function(){
+	console.log(1);
+});
+
+new Promise(function(resolve,reject){
+	console.log(2);
+	resolve();
+}).then(function(){
+	console.log(3);
+});
+
+console.log(4);
+
+// 2 4 3 1
+```
+
+**先执行script同步代码**：先执行Promise中的console.log(2)，再执行console.log(4)
+
+**再执行微任务**：Promise的then函数
+
+最后执行定时器中的console.log(1)，最终输出顺序为：2，4，3，1
+
+注意：对于Promise，本身是同步的， **Promise.then是异步的**
+
+```js
+//题目二（稍微复杂一点，建议结合分析多看几遍）
+
+console.log("script start");
+
+async function async1(){
+    //await  操作符用于等待一个Promise 对象。它只能在异步函数 async function 中使用。
+	await async2();
+	console.log("async1 end");
+}
+
+async function async2(){
+	console.log("async2 end");
+}
+
+async1();
+
+setTimeout(function(){
+	console.log("setTimeout");
+},0);
+
+new Promise(function(resolve,reject){
+	console.log("Promise");
+	resolve();
+}).then(function(){
+	console.log("promise1");
+}).then(function(){
+	console.log("promise2");
+});
+
+console.log("script end");
+
+/*
+script start
+async2 end
+Promise
+script end
+async1 end
+promise1
+promise2
+setTimeout
+*/
+```
+
+首先执行同步代码：
+
+（1）、执行 console.log('script start')
+
+（2）、执行 async1() ，马上执行 async2函数：console.log('async2 end')
+
+（3）、执行 new Promise()中的同步函数：console.log('Promise')
+
+（4）、最后执行 console.log('script end')，同步代码执行完毕
+
+看剩下的异步代码：
+
+（5）、setTimeout是宏任务，留到最后
+
+----
+
+剩下微任务：
+
+```js
+async function async1() {
+  await async2()
+  console.log('async1 end') 
+}
+new Promise(resolve => {
+  resolve()
+})
+.then(function() {
+  console.log('promise1') 
+})
+.then(function() {
+  console.log('promise2') 
+})
+```
+
+（6）、根据队列的先入先出方式，先执行 await async2() 后面的函数 console.log('async1 end') 
+
+（7）、执行promise的resolve函数
+
+```js
+new Promise(resolve => { resolve() })
+```
+
+也就是两个then： console.log('promise1') 、console.log('promise2')
+
+（8）、 最后执行宏任务 setTimeout函数 console.log('setTimeout')
+
+综上所述，以上代码执行的顺序是：
+
+“script start”、“async2 end”、“Promise”、“script end”、“async1 end”、“promise1”、 “promise2 ”、“setTimeout”
+
+----
+
+## 4.4 请问setTimeout与setInterval有何区别？
+
+setTimeout() 是在载入后，延迟指定时间后，去执行一次表达式，次数只有一次
+
+setInterval() 是指定某个任务每隔一段时间就执行一次，可以无限次的定时执行
+
+通俗理解：setTimeout()是**延时器**，setInterval()是**定时器**
+
+注意：setTimeout和setInterval都是不能保证时间精度的，他们的第二个参数（延时）只能保证何时把代码添加到浏览器的任务队列中，**不能保证添加到队列就会立即执行**
+
+若队列前面还有其他任务，主线程被占用，那么就要等这些任务执行完再执行
+
+---
+
+## 4.5 请问js有哪几种方式创建对象？
+
+1. 使用 Object 直接创建对象
+
+```js
+// 创建对象
+var newObj = new Object()；
+// 添加属性
+newObj.property1 = value1;
+newObj.property2 = value2;
+// 添加方法
+newObj.method1 = function () { };
+newObj.method2 = function (a, b, c) { };
+```
+
+2. 使用new关键字调用 构造器 创建对象
+
+```js
+// 创建对象
+function 对象名（参数1，参数2…）{
+    this.property1 = 参数1;
+    this.method1 = function ( ) { }
+}
+// 使用对象
+var obj = new 对象名（参数1，参数2）;  
+```
+
+3. 使用JSON创建对象 （JOSN格式中属性名要加双引号）
+
+```js
+var object = {属性名1：属性值1，属性名2：属性值2，.....}
+```
+
+4. 组合使用构造函数和原型模式
+
+```js
+function Student(name, sex, grade){     
+    this.name=name;     
+    this.sex=sex;     
+    this.grade=grade; 
+}   
+Student.prototype.sayName=function(){        
+    console.log(this.name); 
+}   
+Student.prototype.school="nongda";
+```
+
+构造函数用于**定义实例的属性**，原型模式用于**定义方法和共享的属性**，可极大节约内存
+
+-----
+
+## 4.6 请问你了解js严格模式吗？
+
+设立"严格模式"的意义：
+
+- 消除js语法中的一些不合理、不严谨之处，减少一些怪异行为
+- 消除代码运行的一些不安全之处，保证代码运行的安全
+- 提高编译器效率，增加运行速度
+
+使用"use strict"便可进入严格模式，通常有两种调用方法：
+
+**针对整个文件**：将"use strict"放在文件的第一行，则整个文件都将以"严格模式"运行。
+
+**针对单个函数**：将"use strict"放在函数体的第一行，则整个函数以"严格模式"运行。
+
+严格模式与非严格模式的一些常见区别：
+
+- 在正常模式中，如果一个变量没有声明就赋值，默认是全局变量。**严格模式禁止这种用法，全局变量必须显式声明**，然后再使用
+
+```js
+'use strict'
+a = 1 // 严格模式下将报错，非严格模式a变量会提升至全局作用域
+```
+
+- 严格模式创建了第三种作用域：eval作用域
+
+正常模式下，eval语句的作用域，取决于它处于全局作用域，还是处于函数作用域。**严格模式下，eval语句本身就是一个作用域**，不再能够生成全局变量了，它所生成的变量只能用于eval内部
+
+```js
+'use strict'
+eval('var a = 1')
+console.log(typeof a) // 严格模式下为undefined;非严格模式下为number
+```
+
+- **禁止this关键字指向全局对象**，使用构造函数时，如果忘了加new，this不再指向全局对象
+- 禁止删除变量（ delete x）； 删除对象上不存在的属性也会报错
+
+```js
+function usualMode() {
+    function fn() {} 
+    var a = 1
+    delete a // 不会报错，但实际上也没能删除变量a
+    delete fn // 同delete a
+}
+usalMode() // 正常执行
+ 
+function strictMode() {
+    'use strict'
+    function fn() {} 
+    var a = 1
+    delete a
+}
+strictMode() // 将报错
+```
+
+- 严格模式禁用with语法，使用将报错
+
+```js
+function usualMode() {
+    with({a: 1}) {
+    	console.log(a)
+    }
+}
+usalMode() // 正常输出 1
+ 
+function strictMode() {
+    'use strict'
+    with({a: 1}) {
+    	console.log(a)
+    }
+}
+strictMode() // 将报错
+```
+
+----
+
+# DOM事件相关
+
+---
+
